<resources>
    <string name="app_name">IBOURIT</string>
    <string name="title_home">Home</string>
    <string name="post_new_article">Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="justgotit">JustGotIt</string>
    <string name="inventory">Inventory</string>
    <string name="account">Account</string>
    <string name="top_logo_image">Top logo image</string>
    <string name="more_button">More button</string>
    <string name="google_maps_key">AIzaSyBYQCmvQrYsH7_4MrvjyAe4aqAAlDg0X_I</string>
    <string name="search_here">Search here</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="post">POST!</string>
    <string name="inventory_image">Inventory image</string>
    <string name="empty_message">This inventory is empty\nGet somethin\' and fill it, dude!</string>
</resources>